tests/error/misc_errors/callable_not_list2.err
Error: Invalid type (at $FILE:10:12)
   | 
 8 | 
 9 | @guppy.declare(module)
10 | def foo(f: "Callable[None]") -> None: ...
   |             ^^^^^^^^^^^^^^ Invalid function type

Help: Function types are specified as follows: `Callable[[<arguments>], <return
type>]`

Guppy compilation failed due to 1 previous error
